@@ -2,6 +2,7 @@
 
 + Added makerpm.sh
 * Update deployment scripts for GNU/Linux
+  * Add picta-dlg launcher bash script
 
 
 v0.12.16
